full-moon/tests/roblox_cases/fail/parser/generic_must_declare_default/source.lua
type Foo<X, Y, Z = string, P> = nil